[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "httpx2_kerberos"
description = "Kerberos authentication for HTTPX2 (forked from HTTPX-Kerberos)"
license = "MIT"
requires-python = ">=3.10,<4.0"
authors = [
    { name = "Andrew Chapkowski", email = "achapkowski@esri.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
dependencies = [
    "cryptography>=42.0.0",
    "httpx2>=2.2.0,<3.0.0",
    "pyspnego>=0.12.1; sys_platform == 'win32'",
    "pyspnego[kerberos]>=0.12.1; sys_platform != 'win32'",
]
dynamic = ["readme", "version"]


[project.urls]
Homepage = "https://github.com/achapkowski/httpx_kerberos"
Source = "https://github.com/achapkowski/httpx_kerberos"

[tool.hatch.version]
path = "./httpx2_kerberos/__version__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/httpx2_kerberos",
    "/README.md",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
